syntax = "proto3";
package pb;

service AppRuntimeSync {
  rpc GetAppStatus (StatusRequest) returns (StatusMessage) {}
  rpc GetAppDisk (StatusRequest) returns (DiskMessage) {}
}

message StatusRequest {
  string service_ids = 1;
}

message StatusMessage {
  map<string, string> status = 1;
}

message DiskMessage {
  map<string, double> disks = 1;
}